--- a/src/components/home.module.scss
+++ b/src/components/home.module.scss
@@ -10,8 +10,9 @@
   z-index: 10;
   .headshotContainer {
     width: 150px;
+    margin-bottom: 20px;
     img {
-      border-radius: 100%;
+      border-radius: 50%;
       width: 150px;
     }
   }
