Add images and style homepage

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -27,6 +27,7 @@
       ul {
         display: flex;
         flex-direction: row;
+        margin-top: 0;
         margin-bottom: 0;
         list-style-type: none;
         margin-left: 0;
@@ -34,6 +35,7 @@
         li {
           padding: 0.5rem 0.75rem;
           margin-left: 6px;
+          font-size: 1.2em;
         }
       }
     }
