--- a/src/pages/projects.module.scss
+++ b/src/pages/projects.module.scss
@@ -1,14 +1,24 @@
 .projects {
   .projectGrid {
-    .project-row {
-      display: flex;
-      flex-direction: row;
-    }
-    .project {
-      width: 33.33333%;
-      max-width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    overflow: hidden;
+    .col {
+      flex: 1;
+      width: 33.33333333%;
+      height: 200px;
+      max-width: 300px;
       padding-left: 0.66rem;
       padding-right: 0.66rem;
     }
+    // .project {
+    //   width: 33.33333%;
+    //   max-width: 100%;
+    // }
   }
+  // .collabs {
+  // }
 }
