--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -5,6 +5,10 @@
   .wrapper {
     display: flex;
     flex-direction: row;
+    @media all and (max-width: 576px) {
+      flex-direction: column;
+    }
+
     margin: 0 auto;
     max-width: 960px;
     padding: 1.45rem 1.0875rem;
@@ -22,11 +26,17 @@
     }
 
     .headerNav {
-      margin-left: auto;
+      @media all and (min-width: 576px) {
+        margin-left: auto;
+      }
 
       ul {
         display: flex;
         flex-direction: row;
+        @media all and (max-width: 576px) {
+          justify-content: space-between;
+          padding-left: 0;
+        }
         margin-top: 0;
         margin-bottom: 0;
         list-style-type: none;
