--- a/src/components/home.module.scss
+++ b/src/components/home.module.scss
@@ -29,14 +29,58 @@ body {
       z-index: -1;
     }
   }
+  .homeAbout {
+    p {
+      text-align: center;
+      margin-top: 60px;
+      font-size: 1.2em;
+    }
+    .programming {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      ul {
+        padding: 0;
+        list-style-type: none;
+        li {
+          font-size: 1.6em;
+
+          span {
+            margin-right: 25px;
+            vertical-align: middle;
+          }
+          svg {
+            &.reactIcon {
+              color: turquoise;
+            }
+            &.jsIcon {
+              color: yellow;
+            }
+            &.nodeIcon {
+              color: green;
+            }
+            &.htmlIcon {
+              color: red;
+            }
+            &.cssIcon {
+              color: orange;
+            }
+            &.wordpressIcon {
+              color: #22759b;
+            }
+          }
+        }
+      }
+    }
+  }
   h2 {
     text-align: center;
     padding-top: 25px;
     padding-bottom: 25px;
-    border-top: 2px solid #000;
-    border-bottom: 2px solid #000;
+    border-top: 0.5px solid #000;
+    border-bottom: 0.5px solid #000;
     margin-top: 80px;
-    margin-bottom: 17px;
+    margin-bottom: 80px;
     text-decoration: underline;
   }
   .expertise {
@@ -91,15 +135,29 @@ body {
         }
       }
     }
-    .partners {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
+  }
+  .partners {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
 
-      .partner {
-        width: 25%;
-        height: 200px;
-        min-width: 200px;
+    .partner {
+      width: 25%;
+      margin: auto;
+      opacity: 0.8;
+
+      .partnerInner {
+        padding: 55px;
+
+        @media all and (max-width: 768px) {
+          padding: 15px;
+        }
+      }
+
+      img {
+        filter: grayscale(1);
       }
     }
   }
