--- a/src/pages/projects.module.scss
+++ b/src/pages/projects.module.scss
@@ -8,14 +8,19 @@
     width: 100%;
     overflow: hidden;
     .project {
-      width: 25%;
+      width: 33.3333%;
+      @media all and (max-width: 768px) {
+        width: 50%;
+      }
       height: 200px;
       max-width: 300px;
-      padding: 35px;
       transform: scale(1);
       transition: transform 0.3s ease;
       &:hover {
         transform: scale(1.2);
+      }
+      .projectInner {
+        padding: 35px;
       }
     }
     // .project {
