--- a/src/components/home.module.scss
+++ b/src/components/home.module.scss
@@ -44,6 +44,9 @@ body {
         list-style-type: none;
         li {
           font-size: 1.6em;
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
 
           span {
             margin-right: 25px;
