--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -36,6 +36,7 @@
         @media all and (max-width: 576px) {
           justify-content: space-between;
           padding-left: 0;
+          margin-top: 12px;
         }
         margin-top: 0;
         margin-bottom: 0;
